# mikebom

./: CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  realistic-projects.yml
.project/: darnit.yaml  project.yaml
docs/: DEPENDENCIES.md  TESTING.md  VEX-POLICY.md  design-notes.md
docs/examples/cross-tier-walk/: README.md  walk.py
docs/examples/cross-tier-walk/sboms/: build.cdx.json  image.cdx.json  source.cdx.json
docs/reference/: identifiers.md  sbom-format-mapping.md
docs/user-guide/: cli-reference.md  configuration.md
mikebom-cli/: Cargo.toml
mikebom-cli/src/binding/identifiers/: auto_detect.rs  mod.rs
mikebom-cli/src/cli/: enrich.rs  generate.rs  run.rs  scan_cmd.rs
mikebom-cli/src/generate/: mod.rs
mikebom-cli/src/generate/cyclonedx/: builder.rs  dependencies.rs  metadata.rs  mod.rs
mikebom-cli/src/generate/openvex/: mod.rs
mikebom-cli/src/generate/spdx/: document.rs  mod.rs  packages.rs  relationships.rs  v3_document.rs  v3_relationships.rs
mikebom-cli/src/parity/extractors/: cdx.rs  mod.rs  spdx2.rs  spdx3.rs
mikebom-cli/src/sbom/: mutator.rs
mikebom-cli/src/scan_fs/: docker_daemon.rs  mod.rs  oci_pull.rs
mikebom-cli/src/scan_fs/binary/: cargo_auditable.rs  elf.rs  entry.rs  macho.rs  mod.rs  pe.rs  scan.rs
mikebom-cli/src/scan_fs/oci_pull/: mod.rs  platform.rs  registry.rs
mikebom-cli/src/scan_fs/package_db/: mod.rs
mikebom-cli/tests/: binary_build_provenance.rs  binding_drift.rs  cdx_ref_closure_invariant.rs  dual_format_perf.rs  format_dispatch.rs  holistic_parity.rs  identifiers_build_tier_autodetect.rs  identifiers_root_component_override.rs  no_c_dependencies.rs  oci_registry_smoke.rs  scan_go.rs  spdx3_us3_acceptance.rs  transitive_parity_cargo.rs  transitive_parity_common_sanity.rs  transitive_parity_gem.rs  transitive_parity_go.rs  transitive_parity_maven.rs  transitive_parity_npm.rs  transitive_parity_pip_plain.rs  transitive_parity_pip_poetry.rs  triple_format_perf.rs  vex_per_instance.rs
mikebom-cli/tests/fixtures/golden/cyclonedx/: apk.cdx.json  cargo.cdx.json  deb.cdx.json  gem.cdx.json  golang.cdx.json  maven.cdx.json  npm.cdx.json  pip.cdx.json  rpm.cdx.json
mikebom-cli/tests/fixtures/golden/spdx-2.3/: apk.spdx.json  cargo.spdx.json  deb.spdx.json  gem.spdx.json  golang.spdx.json  maven.spdx.json  npm.spdx.json  pip.spdx.json  rpm.spdx.json
mikebom-cli/tests/fixtures/golden/spdx-3/: apk.spdx3.json  cargo.spdx3.json  deb.spdx3.json  gem.spdx3.json  golang.spdx3.json  maven.spdx3.json  npm.spdx3.json  pip.spdx3.json  rpm.spdx3.json
mikebom-cli/tests/fixtures/transitive_parity/cargo/: README.md
mikebom-cli/tests/fixtures/transitive_parity/npm/: package-lock.json
mikebom-cli/tests/fixtures/transitive_parity/pip_plain/: requirements.txt
mikebom-cli/tests/transitive_parity_common/: mod.rs
mikebom-common/: Cargo.toml
specs/029-cargo-auditable-extraction/: plan.md  spec.md  tasks.md
specs/029-cargo-auditable-extraction/checklists/: requirements.md
specs/031-oci-registry-image-scan/: plan.md  spec.md  tasks.md
specs/031-oci-registry-image-scan/checklists/: requirements.md
specs/035-image-platform-flag/: plan.md  spec.md  tasks.md
specs/035-image-platform-flag/checklists/: requirements.md
specs/050-buildinfo-source-scan/: plan.md  spec.md  tasks.md
specs/055-go-transitive-edges/: realistic-project-baseline.md  tasks.md
specs/072-cross-tier-sbom-binding/: tasks.md
specs/074-build-tier-id-autodetect/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/074-build-tier-id-autodetect/checklists/: requirements.md
specs/074-build-tier-id-autodetect/contracts/: build-tier-autodetect.md
specs/077-root-component-override/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/077-root-component-override/checklists/: requirements.md
specs/077-root-component-override/contracts/: root-component-override.md
specs/083-transitive-correctness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/083-transitive-correctness/checklists/: requirements.md
specs/083-transitive-correctness/contracts/: audit-harness.md
specs/084-cdx-mainmod-collapse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/084-cdx-mainmod-collapse/checklists/: requirements.md
specs/084-cdx-mainmod-collapse/contracts/: target-ref-derivation.md
specs/085-maven-spdx-dep-edges/: plan.md  spec.md  tasks.md
specs/085-maven-spdx-dep-edges/checklists/: requirements.md
specs/088-cargo-procmacro-edges/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/088-cargo-procmacro-edges/checklists/: requirements.md
specs/088-cargo-procmacro-edges/contracts/: procmacro-edge-pin.md
specs/093-repo-polish-quickwins/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/093-repo-polish-quickwins/checklists/: requirements.md
specs/093-repo-polish-quickwins/contracts/: repo-surface-contracts.md
specs/098-compiler-version-extract/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/098-compiler-version-extract/checklists/: requirements.md
specs/098-compiler-version-extract/contracts/: build-provenance-contracts.md
