[package]
name = "mikebom"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mikebom"
path = "src/main.rs"

# Milestone 013 — minimal library crate exposing the cross-format
# parity catalog parser + extractor table at `mikebom::parity::*`.
# The library is consumed by the binary's `cli/parity_cmd.rs` AND
# by integration tests under `tests/`. Only `pub mod parity;` is
# exported today; nothing else from `src/` is intentionally
# library-public — the binary remains the canonical surface for
# every other module (cli, generate, resolve, etc.) per the
# three-crate architecture (Constitution Principle VI).
[lib]
name = "mikebom"
path = "src/lib.rs"

[features]
# `oci-registry` is on by default as of milestone 033 — direct
# registry pulls (`mikebom sbom scan --image alpine:3.19`) are now
# part of the standard install. Users who want a minimal-deps
# build can `--no-default-features` to drop the oci-spec dep.
default = ["oci-registry"]

# Enable user-space eBPF tracing for the `mikebom trace` subcommand.
# Activates aya/aya-log/libc + the `aya-user` feature on mikebom-common,
# all of which are otherwise dropped from the dependency graph.
#
# Requirements when active:
#   - Linux host (the optional deps are also `target_os = "linux"`-gated).
#   - Nightly Rust + bpf-linker for the kernel-side artifact built by
#     `cargo run -p xtask -- ebpf` (separate target triple, separate crate).
#
# See specs/020-ebpf-feature-gate/contracts/feature-flag.md for the
# formal contract. Default builds (Linux + macOS + CI default lane)
# stay stable-only and do not pay the nightly + bpf-linker tax.
ebpf-tracing = [
    "dep:aya",
    "dep:aya-log",
    "dep:libc",
    "mikebom-common/aya-user",
]

# Direct OCI-registry image scanning. When active (default as of
# milestone 033), the `--image` CLI flag accepts an OCI image
# reference (`alpine:3.19`, `gcr.io/foo/bar@sha256:...`, etc.) in
# addition to the existing docker-save tarball path. The reference
# is parsed by mikebom's own thin parser
# (scan_fs/oci_pull/reference.rs); the manifest + layer blobs are
# pulled via mikebom's thin HTTP client
# (scan_fs/oci_pull/registry.rs) on top of workspace reqwest 0.12;
# manifest types come from oci-spec (pure-Rust types-only crate);
# gzipped layers are decompressed and a docker-save-format tarball
# is written to a tempdir before being routed through the existing
# extraction path.
#
# Requirements when active:
#   - Network access to the target registry — only invoked when
#     the user explicitly passes `--image <ref>` to a non-existent
#     path. Default `--path <dir>` and `--image <tar>` flows make
#     no network calls.
#   - rustls-tls via reqwest's existing workspace pin (matches
#     mikebom's TLS posture; native-tls is NOT enabled to keep
#     the dep graph C-free per Principle I).
#
# Disable with `--no-default-features` if you need a minimal-deps
# build (e.g., embedding mikebom in another tool that only scans
# local trees / pre-extracted tarballs).
#
# Anonymous + authenticated pulls (Docker keychain — milestone 034 /
# 031.x, #66). Both anonymous and credentialed flows go through the
# same bearer-token retry path; credentials (when resolved from
# ~/.docker/config.json / $DOCKER_CONFIG/config.json) are applied as
# Basic auth on the realm token GET. Cross-arch image-index
# resolution via `--image-platform <linux/arch[/variant]>`
# (milestone 035 / 031.y, #67). On-disk SHA-256-content-addressed
# blob cache with LRU eviction (milestone 036 / 031.z, #68) —
# disable with `--no-oci-cache` / `MIKEBOM_OCI_CACHE=0`. See
# `specs/031-oci-registry-image-scan/spec.md` for the original
# contract, `specs/032-oci-spec-migration/spec.md` for the substrate
# rationale, `specs/034-authenticated-registry-pulls/spec.md` for
# the auth design, `specs/035-image-platform-flag/spec.md` for the
# cross-arch design, and `specs/036-oci-layer-cache/spec.md` for the
# cache design.
oci-registry = [
    "dep:oci-spec",
]

[dependencies]
mikebom-common = { path = "../mikebom-common", features = ["std"] }

flate2 = "1"
serde_yaml = "0.9"
tar = "0.4"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

base64 = "0.22"
# Milestone 010 — RFC 4648 base32 encoding for deterministic SPDX IDs
# (SPDXRef-Package-<base32(SHA-256(purl))[..16]>) and document
# namespaces. Already present as a transitive dep via
# `jsonschema` and `asn1-rs`; promoted here to a direct dep per
# Constitution Principle VI "no new runtime crates" (not new —
# already in the lockfile).
data-encoding = "2"

# Milestone 013 — regex parser for the canonical SBOM-format-mapping
# datum catalog (`docs/reference/sbom-format-mapping.md`).
# `parity::catalog::parse_mapping_doc` uses three small patterns to
# extract row IDs, property names, and path segments. Already
# present as a transitive dep via `jsonschema`; promoted here per
# Constitution Principle VI "no new runtime crates" (not new —
# already in the lockfile). Plan.md / spec Primary Dependencies
# explicitly names regex.
regex = "1"

# Milestone 003 — pure-Rust-only deps. See specs/003-multi-ecosystem-expansion/
# tasks.md T001 for the feature-pinning rationale (Principle I: zero C).
# Any feature change here must be cross-checked with
# `cargo tree -p mikebom -e normal | rg -i 'libz|zlib|c-bindings|libsqlite3'`
# and the `no_c_dependencies_in_tree` regression test.
object = { version = "0.36", default-features = false, features = ["read", "std", "elf", "macho", "pe", "coff"] }
quick-xml = { version = "0.31", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate-miniz"] }
# Milestone 004 US1 — pure-Rust .rpm v3/v4 header parser. Dependency
# audit (T002 per research.md R1): transitive tree must be C-clean.
# Verified with `cargo tree -p rpm` — no libz-sys / bzip2-sys / etc.
rpm = { version = "0.22", default-features = false, features = [] }

# Feature 006 — SBOMit compliance: DSSE envelope signing + Fulcio keyless +
# Rekor transparency log. Pin to 0.11.x because 0.12+ forces aws-lc-rs via
# the `cert` feature, violating Constitution Principle I (pure Rust, zero C).
# rustls-tls variants chosen to match existing reqwest rustls posture.
# `sigstore-trust-root-*` features dropped in milestone 089 — mikebom doesn't
# use sigstore's TUF client, and the feature dragged in the vulnerable
# `tough` transitive (see specs/089-bump-sigstore-vulns/research.md §2).
# See specs/006-sbomit-suite/research.md R1 for the original audit.
sigstore = { version = "0.11", default-features = false, features = ["cosign-rustls-tls", "fulcio-rustls-tls", "rekor-rustls-tls", "bundle"] }
# Feature 006 — PEM + X.509 parsing for cert SAN + SPKI extraction in
# `mikebom sbom verify`. Transitive deps of sigstore, promoted to direct
# for re-use.
pem = "3"
x509-parser = "0.16"

# Feature 006 US5 — RFC 6902 JSON Patch for SBOM enrichment.
json-patch = "3"

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

# Milestone 031 — direct OCI-registry image scan. Activated by the
# `oci-registry` feature only. Built on oci-spec (types-only,
# pure-Rust) + workspace reqwest 0.12 + a small thin HTTP client in
# scan_fs/oci_pull/registry.rs.
#
# Milestone 032 (#65) replaced milestone-031's `oci-client = "0.12"`
# pin with this oci-spec substrate to escape the version-pin trap
# that locked us out of future oci-client security updates
# (newer oci-client transitively pulled aws-lc-sys via rustls 0.23+,
# violating Constitution Principle I). The
# `no_c_dependencies_in_oci_registry_feature_tree` regression test
# remains as the durability guardrail (still includes aws-lc-sys
# in the blacklist).
oci-spec = { version = "0.9", default-features = false, features = ["distribution", "image"], optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
# Milestone 010 — pure-Rust JSON Schema validator used in tests to check
# produced SPDX 2.3 / SPDX 3.0.1 / OpenVEX output against the vendored
# upstream schemas under `tests/fixtures/schemas/`. Supports both Draft 7
# (SPDX 2.3) and Draft 2020-12 (SPDX 3.0.1, OpenVEX). See
# specs/010-spdx-output-support/research.md R5. Pure Rust — no C deps;
# verified to not break the no_c_dependencies regression test.
jsonschema = { version = "0.46", default-features = false }
# Milestone 055 — hermetic HTTP fixture for the Go transitive-edges
# resolver's proxy-fetch path (FR-011 / FR-012). Pure Rust, async,
# integrates with tokio. Dev-only — never ships in the production
# binary. See specs/055-go-transitive-edges/research.md R9.
wiremock = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
# Activated by the `ebpf-tracing` feature. Combined with the target
# predicate, these are pulled in only when the host is Linux AND the
# feature is enabled. Dropped from default builds per milestone 020.
aya = { version = "0.13", optional = true }
aya-log = { version = "0.2", optional = true }
libc = { version = "0.2", optional = true }

# Milestone 093: cargo-binstall auto-discovery metadata. Locks the
# pkg-url template to mikebom's existing release-tarball naming
# (`mikebom-vX.Y.Z-<rust-triple>.tar.gz`) so `cargo binstall mikebom`
# resolves the binary deterministically regardless of future
# binstall-default changes. cargo treats unknown package.metadata.*
# keys as opaque pass-through; this block cannot break the build.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
